yaml-tests/src/test/resources/include-block/shouldPass/simple-include-different-env.yamsql
#
# simple-include-different-env.yamsql
#
# This source file is part of the FoundationDB open source project
#
# Copyright 2021-2026 Apple Inc. and the FoundationDB project authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This tests a single include block in the yaml file, and hence is 'similar' to simple-include.yamsql in that
# perspective. However, it has a different schema template than the other file, by means of having more index which
# means that the metrics would be different for the same queries that run in the other file.
---
schema_template:
    create table t1(id bigint, col1 bigint, primary key(id))
    create index i1 as select * from t1 where col1 > 1000 order by id
    create index i2 as select * from t1 where id = 0 order by col1
    create index i3 as select * from t1 where col1 > 50 and id < 53434 order by col1
---
include:
    include-block/includes/include-with-explain.yamsql
...
